update slider lead text

--- a/es/index.html
+++ b/es/index.html
@@ -1,7 +1,7 @@
 ---
 layout: main
 title: Tampa Bay Recicla
-lead: Juntos hemos convertido a Tampa Bay en la principal región de reciclaje de Florida
+lead: Juntos hemos convertido a Tampa Bay en una de las principales regiones de reciclaje en Florida
 permalink: /es/
 ---
 
@@ -100,7 +100,7 @@ permalink: /es/
       <div class="tab-pane fade" id="tab3">
         <div class="row">
           <div class="col-md-4 col-md-offset-2">
-            
+
             <h3>¿Qué es la contaminación de reciclaje?</h3>
 
             <p>La contaminación ocurre cuando los residentes intentan reciclar artículos que no se pueden recuperar en nuestros programas de reciclaje residencial de flujo único. Los artículos como bolsas de plástico, cables, lonas y mangueras atascan y dañan el equipo de clasificación. Tire estos artículos que pueden causar enredos para ayudarnos a mantener nuestros equipos de reciclaje trabajando para reciclar los artículos que podamos recuperar con éxito.</p>
