--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: main
 title: Tampa Bay Recycles
-lead: Together We Have Made Tampa Bay the Top Recycling Region in Florida
+lead: Together We Have Made Tampa Bay one of the Top Recycling Regions in Florida
 
 ---
 
