"Trash the Tanglers" featured topic

--- a/es/index.html
+++ b/es/index.html
@@ -34,7 +34,10 @@ permalink: /es/
   <div class="container">
     <ul class="nav nav-tabs text-center" id="myTab" role="tablist">
       <li class="active">
-        <a data-toggle="tab" href="#tab1" role="tab">TEMA DESTACADO</a>
+        <a data-toggle="tab" href="#tab0" role="tab">TEMA DESTACADO</a>
+      </li>
+      <li class="">
+        <a data-toggle="tab" href="#tab1" role="tab">BOLSAS DE PLÁSTICO</a>
       </li>
       <li>
         <a data-toggle="tab" href="#tab2" role="tab">CUANDO TENGA DUDAS, TÍRELO</a>
@@ -44,7 +47,27 @@ permalink: /es/
       </li>
     </ul>
     <div class="tab-content">
-      <div class="tab-pane fade in active" id="tab1">
+
+      <div class="tab-pane fade in active" id="tab0">
+        <div class="row">
+          <div class="col-md-5 col-md-offset-1 col-sm-6">
+
+            <img src="{{ '/assets/images/tanglers-es.jpg' | prepend: site.baseurl }}" alt="Tire los “enredadores” a la basura regular" class="img-responsive center-block">
+
+          </div><!-- /.col -->
+          <div class="col-md-5 col-sm-6">
+            <h3>Tire los “enredadores” a la basura regular</h3>
+
+            <p>Artículos tales como bolsas de plástico, cables, alambres, lonas y mangueras se atascan y pueden dañar los equipos de clasificación para el procesamiento de material reciclable. Esto no solo puede dañar el equipo, sino que los trabajadores deben eliminarlos manualmente, una tarea difícil, sucia y potencialmente peligrosa.</p>
+            <p>Los cordones, cables, lonas, cadenas, sogas y mangueras de cualquier tipo siempre deben desecharse en su contenedor de basura regular (color gris), nunca en el de reciclaje (color azul). Lo mismo aplica a otros enredadores comunes como la envoltura de plástico utilizada en cajas de botellas de agua, perchas de ropa y textiles, como ropa, toallas o ropa de cama. Verifique con su tintorero local las opciones para reciclar colgadores de ropa de alambre y considere donar ropa ligeramente usada a organizaciones benéficas locales.</p>
+            <p>Los “enredadores” también incluyen las bolsas de plástico que puede haber usado para recolectar y almacenar sus materiales reciclables. Tire bolsas de basura al contenedor gris de basura y coloque sus materiales reciclables en el contenedor azul sueltos. Recicle las bolsas de plástico de un solo uso en contenedores especiales en su tienda de comestibles o supermercado local. Si no puede devolver las bolsas a las tiendas, está bien desecharlas en su contenedor gris de basura.</p>
+            <p>Tire estos “enredadores” para ayudarnos a mantener nuestros equipos de reciclaje funcionando y así poder reciclar eficientemente los artículos que podamos recuperar.</p>
+
+          </div><!-- /.col -->
+        </div><!-- /.row -->
+      </div><!-- /#tab1 -->
+
+      <div class="tab-pane fade" id="tab1">
         <div class="row">
           <div class="col-md-5 col-md-offset-1 col-sm-6">
             <div class="embed-responsive embed-responsive-16by9 thumbnail">
@@ -59,6 +82,7 @@ permalink: /es/
           </div><!-- /.col -->
         </div><!-- /.row -->
       </div><!-- /#tab1 -->
+
       <div class="tab-pane fade" id="tab2">
         <div class="row">
           <div class="col-sm-10 col-sm-offset-1 text-center">
@@ -97,6 +121,7 @@ permalink: /es/
           </div><!-- /.col -->
         </div><!-- /.row -->
       </div><!-- /#tab2 -->
+
       <div class="tab-pane fade" id="tab3">
         <div class="row">
           <div class="col-md-4 col-md-offset-2">
@@ -112,6 +137,7 @@ permalink: /es/
           <div class="col-md-4"><img class="img-responsive" src="{{ '/assets/images/contamination.jpg' | prepend: site.baseurl }}"></div><!-- /.col -->
         </div><!-- /.row -->
       </div><!-- /#tab3 -->
+
       <div class="tab-pane fade" id="tab4">
         <div class="row">
           <div class="col-md-8 col-md-offset-2 col-sm-10 col-sm-offset-1 text-center">
@@ -120,6 +146,7 @@ permalink: /es/
           </div><!-- /.col -->
         </div><!-- /.row -->
       </div><!-- /#tab4 -->
+
     </div><!-- /.tab-content -->
   </div><!-- /.container -->
 </section>
