--- a/index.html
+++ b/index.html
@@ -32,7 +32,10 @@ lead: Together We Have Made Tampa Bay one of the Top Recycling Regions in Florid
   <div class="container">
     <ul class="nav nav-tabs text-center" id="myTab" role="tablist">
       <li class="active">
-        <a data-toggle="tab" href="#tab1" role="tab">Featured Topic</a>
+        <a data-toggle="tab" href="#tab0" role="tab">Featured Topic</a>
+      </li>
+      <li class="">
+        <a data-toggle="tab" href="#tab1" role="tab">Plastic Bags</a>
       </li>
       <li>
         <a data-toggle="tab" href="#tab2" role="tab">When in Doubt, Throw It Out</a>
@@ -42,7 +45,27 @@ lead: Together We Have Made Tampa Bay one of the Top Recycling Regions in Florid
       </li>
     </ul>
     <div class="tab-content">
-      <div class="tab-pane fade in active" id="tab1">
+
+      <div class="tab-pane fade in active" id="tab0">
+        <div class="row">
+          <div class="col-md-5 col-md-offset-1 col-sm-6">
+
+            <img src="{{ '/assets/images/tanglers.jpg' | prepend: site.baseurl }}" alt="Trash the Tanglers" class="img-responsive center-block">
+
+          </div><!-- /.col -->
+          <div class="col-md-5 col-sm-6">
+            <h3>Trash the Tanglers</h3>
+
+            <p>Items such as plastic bags, cords, wires, tarps and hoses jam and damage sorting equipment used for recycling processing. Not only can this damage the equipment, but workers must manually remove them, a difficult, dirty, and potentially dangerous task.</p>
+            <p>Cords, wires, tarps, chains, rope, and hoses of any type should always be discarded in your trash cart, never your recycling cart. The same applies to other common tanglers like the plastic film used on cases of water bottles, clothing hangers, and textiles, such as clothing, towels, or linens. Check with your local dry cleaner for options to recycle wire clothing hangers and consider donating lightly worn clothing to local charities.</p>
+            <p>Tanglers also include the plastic bags you may have used to gather and store your recyclables. Throw garbage bags in the trash and place your recyclables in the cart loose. Recycle single-use plastic bags in special bins at your local grocery or big box store. If you can’t return bags to store locations, it’s okay to discard them in your trash cart.</p>
+            <p>Trash these tanglers to help us keep our recycling equipment working to recycle items that we can successfully recover.</p>
+
+          </div><!-- /.col -->
+        </div><!-- /.row -->
+      </div><!-- /#tab1 -->
+
+      <div class="tab-pane fade" id="tab1">
         <div class="row">
           <div class="col-md-5 col-md-offset-1 col-sm-6">
             <div class="embed-responsive embed-responsive-16by9 thumbnail">
@@ -57,6 +80,7 @@ lead: Together We Have Made Tampa Bay one of the Top Recycling Regions in Florid
           </div><!-- /.col -->
         </div><!-- /.row -->
       </div><!-- /#tab1 -->
+
       <div class="tab-pane fade" id="tab2">
         <div class="row">
           <div class="col-sm-10 col-sm-offset-1 text-center">
@@ -87,6 +111,7 @@ lead: Together We Have Made Tampa Bay one of the Top Recycling Regions in Florid
           </div><!-- /.col -->
         </div><!-- /.row -->
       </div><!-- /#tab2 -->
+
       <div class="tab-pane fade" id="tab3">
         <div class="row">
           <div class="col-md-4 col-md-offset-2">
@@ -99,6 +124,7 @@ lead: Together We Have Made Tampa Bay one of the Top Recycling Regions in Florid
           <div class="col-md-4"><img class="img-responsive" src="{{ '/assets/images/contamination.jpg' | prepend: site.baseurl }}"></div><!-- /.col -->
         </div><!-- /.row -->
       </div><!-- /#tab3 -->
+
       <div class="tab-pane fade" id="tab4">
         <div class="row">
           <div class="col-md-8 col-md-offset-2 col-sm-10 col-sm-offset-1 text-center">
@@ -107,6 +133,7 @@ lead: Together We Have Made Tampa Bay one of the Top Recycling Regions in Florid
           </div><!-- /.col -->
         </div><!-- /.row -->
       </div><!-- /#tab4 -->
+
     </div><!-- /.tab-content -->
   </div><!-- /.container -->
 </section>
