--- a/es/index.html
+++ b/es/index.html
@@ -72,7 +72,7 @@ permalink: /es/
           <div class="col-md-5 col-md-offset-1 col-sm-6">
             <div class="embed-responsive embed-responsive-16by9 thumbnail">
               <!--  -->
-              <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/RCn5xrAFh2Q"></iframe>
+              <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/YsFqk9V1bFU"></iframe>
             </div>
           </div><!-- /.col -->
           <div class="col-md-5 col-sm-6">
@@ -115,7 +115,7 @@ permalink: /es/
         <div class="row">
           <div class="col-sm-6 col-sm-offset-3">
             <div class="embed-responsive embed-responsive-16by9 thumbnail">
-              <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/38lyLUtUSVk"></iframe>
+              <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/wBajyCx7wlk"></iframe>
             </div>
             <!-- <img class="img-responsive" src="images/polyStyrene.jpg"> -->
           </div><!-- /.col -->
