--- a/es/index.html
+++ b/es/index.html
@@ -52,7 +52,10 @@ permalink: /es/
         <div class="row">
           <div class="col-md-5 col-md-offset-1 col-sm-6">
 
-            <img src="{{ '/assets/images/tanglers-es.jpg' | prepend: site.baseurl }}" alt="Tire los “enredadores” a la basura regular" class="img-responsive center-block">
+            <div class="embed-responsive embed-responsive-16by9">
+              <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/38lyLUtUSVk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+            <!-- <img src="{{ '/assets/images/tanglers-es.jpg' | prepend: site.baseurl }}" alt="Tire los “enredadores” a la basura regular" class="img-responsive center-block"> -->
 
           </div><!-- /.col -->
           <div class="col-md-5 col-sm-6">
