--- a/index.html
+++ b/index.html
@@ -30,113 +30,8 @@ lead: Together We Have Made Tampa Bay one of the Top Recycling Regions in Florid
 
 <section class="content-block content-1-8">
   <div class="container">
-    <ul class="nav nav-tabs text-center" id="myTab" role="tablist">
-      <li class="active">
-        <a data-toggle="tab" href="#tab0" role="tab">Featured Topic</a>
-      </li>
-      <li class="">
-        <a data-toggle="tab" href="#tab1" role="tab">Plastic Bags</a>
-      </li>
-      <li>
-        <a data-toggle="tab" href="#tab2" role="tab">When in Doubt, Throw It Out</a>
-      </li>
-      <li>
-        <a data-toggle="tab" href="#tab3" role="tab">What is Recycling Contamination?</a>
-      </li>
-    </ul>
-    <div class="tab-content">
 
-      <div class="tab-pane fade in active" id="tab0">
-        <div class="row">
-          <div class="col-md-5 col-md-offset-1 col-sm-6">
+    {% include tabs.html %}
 
-            <div class="embed-responsive embed-responsive-16by9">
-              <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/38lyLUtUSVk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            </div>
-            <!-- <img src="{{ '/assets/images/tanglers.jpg' | prepend: site.baseurl }}" alt="Trash the Tanglers" class="img-responsive center-block"> -->
-
-          </div><!-- /.col -->
-          <div class="col-md-5 col-sm-6">
-            <h3>Trash the Tanglers</h3>
-
-            <p>Items such as plastic bags, cords, wires, tarps and hoses jam and damage sorting equipment used for recycling processing. Not only can this damage the equipment, but workers must manually remove them, a difficult, dirty, and potentially dangerous task.</p>
-            <p>Cords, wires, tarps, chains, rope, and hoses of any type should always be discarded in your trash cart, never your recycling cart. The same applies to other common tanglers like the plastic film used on cases of water bottles, clothing hangers, and textiles, such as clothing, towels, or linens. Check with your local dry cleaner for options to recycle wire clothing hangers and consider donating lightly worn clothing to local charities.</p>
-            <p>Tanglers also include the plastic bags you may have used to gather and store your recyclables. Throw garbage bags in the trash and place your recyclables in the cart loose. Recycle single-use plastic bags in special bins at your local grocery or big box store. If you can’t return bags to store locations, it’s okay to discard them in your trash cart.</p>
-            <p>Trash these tanglers to help us keep our recycling equipment working to recycle items that we can successfully recover.</p>
-
-          </div><!-- /.col -->
-        </div><!-- /.row -->
-      </div><!-- /#tab1 -->
-
-      <div class="tab-pane fade" id="tab1">
-        <div class="row">
-          <div class="col-md-5 col-md-offset-1 col-sm-6">
-            <div class="embed-responsive embed-responsive-16by9 thumbnail">
-              <!--  -->
-              <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/RCn5xrAFh2Q"></iframe>
-            </div>
-          </div><!-- /.col -->
-          <div class="col-md-5 col-sm-6">
-            <h3>Keep Plastic Bags Out of Recycling</h3>
-            <p>Remember to keep your recyclables clean, dry, and un-bagged when depositing them into recycling carts or local drop-off centers. &nbsp;Bagged recyclables aren’t recycled because they can’t be sorted by the recycling equipment.<br></p>
-            <p>Utilizing reusable bags is more eco-friendly than getting single-use plastic bags when shopping. Plastic bags can only be recycled at participating retailers. If you can’t return bags to store locations, it’s okay to throw them away in the garbage since all four governments use Waste-to-Energy facilities for trash disposal – turning garbage into renewable electricity.<br></p>
-          </div><!-- /.col -->
-        </div><!-- /.row -->
-      </div><!-- /#tab1 -->
-
-      <div class="tab-pane fade" id="tab2">
-        <div class="row">
-          <div class="col-sm-10 col-sm-offset-1 text-center">
-            <h3>When in Doubt, Throw It Out</h3>
-            <p>If you are unsure about whether an item is recyclable, visit your municipal recycling webpage below to verify if it can be recycled in your program. &nbsp;Remember “when in doubt, throw it out” as local recycling programs are designed to recover typical household plastic, glass and metal containers, and dry paper and cardboard. Not all plastics and metals can be recycled in local programs.</p>
-            <ul>
-              <li>
-                <a href="http://www.hcflgov.net/residents/property-owners-and-renters/trash-and-recycling/what-can-i-recycle" target="_blank">Hillsborough County</a>
-              </li>
-              <li>
-                <a href="http://www.pinellascounty.org/solidwaste/recycle.htm" target="_blank">Pinellas County</a>
-              </li>
-              <li>
-                <a href="https://www.tampagov.net/solid-waste/programs/recycling-and-waste-reduction" target="_blank">City of Tampa</a>
-              </li>
-              <li>
-                <a href="http://www.stpete.org/recycling" target="_blank">City of St. Petersburg</a>
-              </li>
-            </ul>
-          </div><!-- /.col -->
-        </div><!-- /.row -->
-        <div class="row">
-          <div class="col-sm-6 col-sm-offset-3">
-            <div class="embed-responsive embed-responsive-16by9 thumbnail">
-              <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/38lyLUtUSVk"></iframe>
-            </div>
-            <!-- <img class="img-responsive" src="images/polyStyrene.jpg"> -->
-          </div><!-- /.col -->
-        </div><!-- /.row -->
-      </div><!-- /#tab2 -->
-
-      <div class="tab-pane fade" id="tab3">
-        <div class="row">
-          <div class="col-md-4 col-md-offset-2">
-            <h3>What is Recycling Contamination?</h3>
-            <p>Contamination happens when residents attempt to recycle items that can’t be recovered in our single-stream residential recycling programs. Items such as plastic bags, cords, wires, tarps, and hoses jam and damage sorting equipment. Trash these tanglers to help us keep our recycling equipment working to recycle items that we can successfully recover.</p>
-            <p>Unrinsed food containers or soiled paper can’t be recovered and contaminate the other clean, quality recyclables. Items, such as electronics or clothing, also can’t be recovered in single-stream residential drop-off or curbside collection programs, but may be recyclable at specific locations and other collection programs within the region.</p>
-            <p>Contamination increases recycling costs and degrades the quality of materials, reducing the ability of the materials to be recycled. Help contribute to the success of recycling programs by reviewing what can and cannot be recycled by visiting your local government’s recycling webpage.</p>
-            <p>See how the State of Florida is tackling recycling contamination by visiting the <a href="http://floridarecycles.org/" target="_blank">FloridaRecycles</a> webpage.</p>
-          </div><!-- /.col -->
-          <div class="col-md-4"><img class="img-responsive" src="{{ '/assets/images/contamination.jpg' | prepend: site.baseurl }}"></div><!-- /.col -->
-        </div><!-- /.row -->
-      </div><!-- /#tab3 -->
-
-      <div class="tab-pane fade" id="tab4">
-        <div class="row">
-          <div class="col-md-8 col-md-offset-2 col-sm-10 col-sm-offset-1 text-center">
-            <h3></h3>
-            <p></p>
-          </div><!-- /.col -->
-        </div><!-- /.row -->
-      </div><!-- /#tab4 -->
-
-    </div><!-- /.tab-content -->
   </div><!-- /.container -->
 </section>
