--- a/es/index.html
+++ b/es/index.html
@@ -1,155 +1,14 @@
 ---
-layout: main
-title: Tampa Bay Recicla
-lead: Juntos hemos convertido a Tampa Bay en una de las principales regiones de reciclaje en Florida
-permalink: /es/
 ---
 
-<section class="content-1-7 content-block" id="content-1-7">
-  <div class="container">
+<!DOCTYPE html>
+<html lang="es" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title>Tampa Bay Recicla</title>
+    <meta http-equiv="refresh" content="0; url=https://translate.google.com/translate?sl=auto&tl=es&u={{ site.url }}">
+  </head>
+  <body>
 
-    {% include gov-logos.html %}
-
-    <div class="row center-block" id="lead-text">
-      <div class="col-md-10 col-md-offset-1 text-left">
-        <p>
-          Los gobiernos locales de Tampa Bay se han unido para mejorar los esfuerzos de reciclaje en la región. Independientemente de la comunidad del área de Tampa Bay a la que usted llame hogar, todos los programas residenciales de reciclaje en los condados de Hillsborough y Pinellas ahora reciclan los mismos artículos, pero también enfrentamos el mismo problema de contaminación: intentar reciclar artículos o materiales sucios que nuestros programas no aceptan.
-        </p>
-        <p>
-          Únase a la conversación de las redes sociales, comparta sugerencias de reciclaje y haga preguntas utilizando <strong>#TampaBayRecycles</strong>
-        </p>
-      </div>
-    </div>
-    <div class="row" id="pull-quote">
-      <div class="col-md-8 col-md-offset-2">
-        <blockquote id="lead">
-          Ya sea que haya estado reciclando durante décadas o recién haya comenzado, vale la pena echar un segundo vistazo para asegurarse de que está reciclando correctamente. La tecnología y los procesos de reciclaje cambian con el tiempo, por lo que las reglas del programa de reciclaje también cambian.
-        </blockquote>
-      </div>
-    </div>
-  </div><!-- /.container -->
-</section>
-
-<section class="content-block content-1-8">
-  <div class="container">
-    <ul class="nav nav-tabs text-center" id="myTab" role="tablist">
-      <li class="active">
-        <a data-toggle="tab" href="#tab0" role="tab">TEMA DESTACADO</a>
-      </li>
-      <li class="">
-        <a data-toggle="tab" href="#tab1" role="tab">BOLSAS DE PLÁSTICO</a>
-      </li>
-      <li>
-        <a data-toggle="tab" href="#tab2" role="tab">CUANDO TENGA DUDAS, TÍRELO</a>
-      </li>
-      <li>
-        <a data-toggle="tab" href="#tab3" role="tab">¿QUÉ ES LA CONTAMINACIÓN DE RECICLAJE?</a>
-      </li>
-    </ul>
-    <div class="tab-content">
-
-      <div class="tab-pane fade in active" id="tab0">
-        <div class="row">
-          <div class="col-md-5 col-md-offset-1 col-sm-6">
-
-            <div class="embed-responsive embed-responsive-16by9">
-              <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/38lyLUtUSVk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            </div>
-            <!-- <img src="{{ '/assets/images/tanglers-es.jpg' | prepend: site.baseurl }}" alt="Tire los “enredadores” a la basura regular" class="img-responsive center-block"> -->
-
-          </div><!-- /.col -->
-          <div class="col-md-5 col-sm-6">
-            <h3>Tire los “enredadores” a la basura regular</h3>
-
-            <p>Artículos tales como bolsas de plástico, cables, alambres, lonas y mangueras se atascan y pueden dañar los equipos de clasificación para el procesamiento de material reciclable. Esto no solo puede dañar el equipo, sino que los trabajadores deben eliminarlos manualmente, una tarea difícil, sucia y potencialmente peligrosa.</p>
-            <p>Los cordones, cables, lonas, cadenas, sogas y mangueras de cualquier tipo siempre deben desecharse en su contenedor de basura regular (color gris), nunca en el de reciclaje (color azul). Lo mismo aplica a otros enredadores comunes como la envoltura de plástico utilizada en cajas de botellas de agua, perchas de ropa y textiles, como ropa, toallas o ropa de cama. Verifique con su tintorero local las opciones para reciclar colgadores de ropa de alambre y considere donar ropa ligeramente usada a organizaciones benéficas locales.</p>
-            <p>Los “enredadores” también incluyen las bolsas de plástico que puede haber usado para recolectar y almacenar sus materiales reciclables. Tire bolsas de basura al contenedor gris de basura y coloque sus materiales reciclables en el contenedor azul sueltos. Recicle las bolsas de plástico de un solo uso en contenedores especiales en su tienda de comestibles o supermercado local. Si no puede devolver las bolsas a las tiendas, está bien desecharlas en su contenedor gris de basura.</p>
-            <p>Tire estos “enredadores” para ayudarnos a mantener nuestros equipos de reciclaje funcionando y así poder reciclar eficientemente los artículos que podamos recuperar.</p>
-
-          </div><!-- /.col -->
-        </div><!-- /.row -->
-      </div><!-- /#tab1 -->
-
-      <div class="tab-pane fade" id="tab1">
-        <div class="row">
-          <div class="col-md-5 col-md-offset-1 col-sm-6">
-            <div class="embed-responsive embed-responsive-16by9 thumbnail">
-              <!--  -->
-              <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/YsFqk9V1bFU"></iframe>
-            </div>
-          </div><!-- /.col -->
-          <div class="col-md-5 col-sm-6">
-            <h3>Mantenga las bolsas de plástico sin reciclar</h3>
-            <p>Recuerde mantener sus materiales reciclables limpios, secos y sin bolsa cuando los deposite en carritos de reciclaje o centros de entrega locales. Los materiales reciclables en bolsas no se reciclan porque no se pueden clasificar con el equipo de reciclaje.</p>
-            <p>Utilizar bolsas reutilizables es más ecológico que comprar bolsas de plástico de un solo uso para las compras. Las bolsas de plástico solo se pueden reciclar en los minoristas participantes. Si no puede devolver las bolsas para almacenar las ubicaciones, está bien tirarlas a la basura, ya que los cuatro gobiernos usan instalaciones de conversión de residuos en energía para la eliminación de basura, convirtiendo la basura en electricidad renovable.</p>
-          </div><!-- /.col -->
-        </div><!-- /.row -->
-      </div><!-- /#tab1 -->
-
-      <div class="tab-pane fade" id="tab2">
-        <div class="row">
-          <div class="col-sm-10 col-sm-offset-1 text-center">
-            <h3>Cuando esté en duda, arrójelo</h3>
-            <p>Si no está seguro de si un artículo es reciclable, visite su página web municipal de reciclaje a continuación para verificar si puede reciclarse en su programa. Recuerde "en caso de duda, tírelo" ya que los programas locales de reciclaje están diseñados para recuperar contenedores domésticos típicos de plástico, vidrio y metal, y papel y cartón seco. No todos los plásticos y metales pueden reciclarse en programas locales.</p>
-            <ul>
-              <li>
-                <a href="http://www.hcflgov.net/residents/property-owners-and-renters/trash-and-recycling/what-can-i-recycle" target="_blank">
-                  Condado de Hillsborough
-                </a>
-              </li>
-              <li>
-                <a href="http://www.pinellascounty.org/solidwaste/recycle.htm" target="_blank">
-                  Condado de Pinellas
-                </a>
-              </li>
-              <li>
-                <a href="https://www.tampagov.net/solid-waste/programs/recycling-and-waste-reduction" target="_blank">
-                  Ciudad de Tampa
-                </a>
-              </li>
-              <li>
-                <a href="http://www.stpete.org/recycling" target="_blank">
-                  Ciudad de San Petersburgo
-                </a>
-              </li>
-            </ul>
-          </div><!-- /.col -->
-        </div><!-- /.row -->
-        <div class="row">
-          <div class="col-sm-6 col-sm-offset-3">
-            <div class="embed-responsive embed-responsive-16by9 thumbnail">
-              <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/wBajyCx7wlk"></iframe>
-            </div>
-            <!-- <img class="img-responsive" src="images/polyStyrene.jpg"> -->
-          </div><!-- /.col -->
-        </div><!-- /.row -->
-      </div><!-- /#tab2 -->
-
-      <div class="tab-pane fade" id="tab3">
-        <div class="row">
-          <div class="col-md-4 col-md-offset-2">
-
-            <h3>¿Qué es la contaminación de reciclaje?</h3>
-
-            <p>La contaminación ocurre cuando los residentes intentan reciclar artículos que no se pueden recuperar en nuestros programas de reciclaje residencial de flujo único. Los artículos como bolsas de plástico, cables, lonas y mangueras atascan y dañan el equipo de clasificación. Tire estos artículos que pueden causar enredos para ayudarnos a mantener nuestros equipos de reciclaje trabajando para reciclar los artículos que podamos recuperar con éxito.</p>
-            <p>Los recipientes de comida no enjuagados o el papel sucio no se pueden recuperar y contaminar los otros materiales reciclables limpios y de calidad. Los artículos, como los artículos electrónicos o la ropa, tampoco se pueden recuperar en los programas de recolección residencial en un solo flujo o en la acera, pero pueden reciclarse en ubicaciones específicas y otros programas de recolección dentro de la región.</p>
-            <p>La contaminación aumenta los costos de reciclaje y degrada la calidad de los materiales, reduciendo la capacidad de reciclado de los materiales. Ayude a contribuir al éxito de los programas de reciclaje revisando qué puede y no puede reciclarse visitando la página web de reciclaje de su gobierno local.</p>
-            <p>Vea cómo el estado de Florida está abordando la contaminación del reciclaje visitando la página web de <a href="http://floridarecycles.org/" target="_blank">FloridaRecycles</a>.</p>
-
-          </div><!-- /.col -->
-          <div class="col-md-4"><img class="img-responsive" src="{{ '/assets/images/contamination.jpg' | prepend: site.baseurl }}"></div><!-- /.col -->
-        </div><!-- /.row -->
-      </div><!-- /#tab3 -->
-
-      <div class="tab-pane fade" id="tab4">
-        <div class="row">
-          <div class="col-md-8 col-md-offset-2 col-sm-10 col-sm-offset-1 text-center">
-            <h3></h3>
-            <p></p>
-          </div><!-- /.col -->
-        </div><!-- /.row -->
-      </div><!-- /#tab4 -->
-
-    </div><!-- /.tab-content -->
-  </div><!-- /.container -->
-</section>
+  </body>
+</html>
