--- a/index.html
+++ b/index.html
@@ -1,40 +1,4 @@
 ---
 layout: main
-title: Tampa Bay Recycles
-lead: Together We Have Made Tampa Bay one of the Top Recycling Regions in Florida
-featured_topic_text: "Featured Topic"
-translate_text: "Español"
-translate_link: "/es"
+locale: en
 ---
-
-<section class="content-1-7 content-block" id="content-1-7">
-  <div class="container">
-
-    {% include gov-logos.html %}
-
-    <div class="row center-block" id="lead-text">
-      <div class="col-md-10 col-md-offset-1 text-left">
-        <p>Local governments across Tampa Bay have teamed up to improve recycling efforts in the region. No matter which Tampa Bay area community you call home, all residential recycling programs throughout Hillsborough and Pinellas counties now recycle the same items but we all also face the same challenge of contamination – attempting to recycle soiled items or materials our programs don’t accept.</p>
-        <p>
-          Join the social media conversation, share recycling tips, and ask questions by using <strong>#TampaBayRecycles</strong>
-        </p>
-      </div>
-    </div>
-    <div class="row" id="pull-quote">
-      <div class="col-md-8 col-md-offset-2">
-        <blockquote id="lead">
-          Whether you have been recycling for decades or just started, it’s worth taking a second look to make sure you are recycling correctly. Recycling technology and processes change over time, so recycling program rules change, too.
-        </blockquote>
-      </div>
-    </div>
-  </div><!-- /.container -->
-</section>
-
-<section class="content-block content-1-8">
-  <div class="container">
-
-    {% assign filtered_posts = site.posts | where: 'lang', 'en'  %}
-    {% include tabs.html %}
-
-  </div><!-- /.container -->
-</section>
