--- a/_posts/es/2019-06-23-trash-tanglers.html
+++ b/_posts/es/2019-06-23-trash-tanglers.html
@@ -8,7 +8,7 @@ lang: "es"
   <div class="col-md-5 col-md-offset-1 col-sm-6">
 
     <div class="embed-responsive embed-responsive-16by9">
-      <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/38lyLUtUSVk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/wBajyCx7wlk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
     <!-- <img src="{{ '/assets/images/tanglers-es.jpg' | prepend: site.baseurl }}" alt="Tire los “enredadores” a la basura regular" class="img-responsive center-block"> -->
 
