convert to ostatic html

--- a/index.html
+++ b/index.html
@@ -1,4 +1,431 @@
----
-layout: main
-locale: en
----
+<!DOCTYPE html>
+<html lang="en" style="height: 100%">
+  <head>
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=UA-27684456-4"
+    ></script>
+    <script type="text/javascript">
+      window.dataLayer = window.dataLayer || []
+      function gtag() {
+        dataLayer.push(arguments)
+      }
+      gtag('js', new Date())
+      gtag('config', 'UA-27684456-4')
+    </script>
+
+    <meta charset="utf-8" />
+    <meta content="width=device-width, initial-scale=1.0" name="viewport" />
+
+    <title>Tampa Bay Recycles</title>
+
+    <!-- Core CSS -->
+    <link
+      href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,400,300,600,700"
+      rel="stylesheet"
+    />
+    <link
+      href="http://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic"
+      rel="stylesheet"
+    />
+    <link href="/assets/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="/assets/css/font-awesome.min.css" rel="stylesheet" />
+    <link href="/assets/css/style-library-1.css" rel="stylesheet" />
+    <link href="/assets/css/blocks.css" rel="stylesheet" />
+    <link href="/assets/css/custom.css" rel="stylesheet" />
+    <!-- HTML5 shim, for IE6-8 support of HTML5 elements. All other JS at the end of file. -->
+    <!--[if lt IE 9]>
+      <script src="js/html5shiv.js"></script>
+      <script src="js/respond.min.js"></script>
+    <![endif]-->
+  </head>
+  <body data-spy="scroll" data-target="nav">
+    <header
+      class="soft-scroll header-3"
+      id="header-3"
+      data-baseurl=""
+      data-images='["/assets/images/carousel/Hillsborough Family at Home.JPG","/assets/images/carousel/Pinellas Family at Collection.JPG","/assets/images/carousel/Hillsborough Family at Tampa Park.JPG","/assets/images/carousel/Pinellas Family at Store.JPG"]'
+    >
+      <section class="hero">
+        <div class="container">
+          <div class="col-md-8 col-md-offset-2 text-center">
+            <div class="editContent">
+              <h1>
+                <img
+                  src="/assets/images/brand/recycleLogo.png"
+                  class="img-responsive center-block"
+                />
+                Tampa Bay Recycles
+              </h1>
+            </div>
+            <div class="editContent">
+              <p class="lead">
+                Together We Have Made Tampa Bay one of the Top Recycling Regions
+                in Florida
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+    </header>
+
+    <section class="content-1-7 content-block" id="content-1-7">
+      <div class="container">
+        <!-- gov logos -->
+
+        <div class="row">
+          <div class="col-md-3">
+            <a
+              href="http://www.hillsboroughcounty.org/en/residents/property-owners-and-renters/trash-and-recycling/what-can-i-recycle"
+              target="_blank"
+            >
+              <img
+                alt="Hillsborough County"
+                src="/assets/images/partner-logos/hillsCo.png"
+              />
+            </a>
+          </div>
+          <div class="col-md-3">
+            <a
+              href="https://www.tampagov.net/solid-waste/programs/recycling-and-waste-reduction"
+              target="_blank"
+            >
+              <img
+                alt="City of Tampa"
+                src="/assets/images/partner-logos/COT%20logo%20blue.png"
+              />
+            </a>
+          </div>
+          <div class="col-md-3">
+            <a href="http://www.pinellascounty.org/recycle" target="_blank">
+              <img
+                alt="Pinellas County"
+                src="/assets/images/partner-logos/SW_3pmsc.png"
+              />
+            </a>
+          </div>
+          <div class="col-md-3">
+            <a href="http://www.stpete.org/recycling" target="_blank">
+              <img
+                alt="Client Logo"
+                src="/assets/images/partner-logos/StPetersburg%20Logo%20Full%20Color.png"
+              />
+            </a>
+          </div>
+        </div>
+
+        <!--  -->
+        <div class="row center-block" id="lead-text">
+          <div class="col-md-10 col-md-offset-1 text-left">
+            <p>
+              Local governments across Tampa Bay have teamed up to improve
+              recycling efforts in the region. Recycling rules vary by
+              jurisdiction based on collection and processing capabilities so
+              please check with your local recycling service provider to ensure
+              you are recycling correctly and helping our region avoid the
+              common challenge of contamination - attempting to recycle soiled
+              items or materials our programs don't accept.
+            </p>
+
+            <p>
+              Join the social media conversation, share recycling tips, and ask
+              questions by using <strong>#TampaBayRecycles</strong>
+            </p>
+          </div>
+        </div>
+        <div class="row" id="pull-quote">
+          <div class="col-md-8 col-md-offset-2">
+            <blockquote id="lead">
+              Whether you have been recycling for decades or just started, it's
+              worth taking a second look to make sure you are recycling
+              correctly. Recycling technology and processes change over time, so
+              recycling program rules change, too.
+            </blockquote>
+          </div>
+        </div>
+      </div>
+      <!-- /.container -->
+    </section>
+
+    <!-- content -->
+    <section class="content-block content-1-8">
+      <div class="container">
+        <ul class="nav nav-tabs text-center" id="myTab" role="tablist">
+          <li class="active">
+            <a data-toggle="tab" href="#tab1" role="tab"> Featured Topic </a>
+          </li>
+
+          <li class="">
+            <a data-toggle="tab" href="#tab2" role="tab"> Tanglers </a>
+          </li>
+
+          <li class="">
+            <a data-toggle="tab" href="#tab3" role="tab"> Plastic Bags </a>
+          </li>
+
+          <li class="">
+            <a data-toggle="tab" href="#tab4" role="tab">
+              When in Doubt, Throw It Out
+            </a>
+          </li>
+
+          <li class="">
+            <a data-toggle="tab" href="#tab5" role="tab">
+              What is Recycling Contamination?
+            </a>
+          </li>
+        </ul>
+
+        <div class="tab-content">
+          <div class="tab-pane fade in active" id="tab1">
+            <div class="row">
+              <div class="col-md-4 col-md-offset-2">
+                <h3>Keep Recycling Loose</h3>
+                <p>
+                  Putting recyclables in plastic bags can ruin your recycling
+                  efforts. The automated equipment used to sort recyclables at
+                  the recycling processing facilities cannot remove items from
+                  plastic bags. This means bagged recyclables get set aside as
+                  trash.
+                </p>
+
+                <p>
+                  Bagged items are dangerous for workers to open, since they
+                  often include broken glass or other sharp objects, and if the
+                  contents are trash it can ruin other recyclables. Plastic bags
+                  also tangle up the sorting equipment causing damage, work
+                  slowdowns, and hazards for workers.
+                </p>
+
+                <p>
+                  To make the most of your recycling efforts, only place loose
+                  recyclable items in the curbside collection cart, drop off
+                  recycling container, or community collection bin. If you
+                  gather recyclables in a plastic bag, please empty the items
+                  into the recycling container and trash the bag or reuse it.
+                </p>
+              </div>
+              <!-- /.col -->
+              <div class="col-md-4">
+                <img
+                  class="img-responsive"
+                  src="/assets/images/recycle-art.png"
+                />
+              </div>
+              <!-- /.col -->
+            </div>
+            <!-- /.row -->
+          </div>
+
+          <div class="tab-pane fade" id="tab2">
+            <div class="row">
+              <div class="col-md-5 col-md-offset-1 col-sm-6">
+                <div class="embed-responsive embed-responsive-16by9">
+                  <iframe
+                    class="embed-responsive-item"
+                    src="https://www.youtube.com/embed/38lyLUtUSVk"
+                    frameborder="0"
+                    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen
+                  ></iframe>
+                </div>
+                <!-- <img src="/assets/images/tanglers.jpg" alt="Trash the Tanglers" class="img-responsive center-block"> -->
+              </div>
+              <!-- /.col -->
+              <div class="col-md-5 col-sm-6">
+                <h3>Trash the Tanglers</h3>
+
+                <p>
+                  Items such as plastic bags, cords, wires, tarps and hoses jam
+                  and damage sorting equipment used for recycling processing.
+                  Not only can this damage the equipment, but workers must
+                  manually remove them, a difficult, dirty, and potentially
+                  dangerous task.
+                </p>
+                <p>
+                  Cords, wires, tarps, chains, rope, and hoses of any type
+                  should always be discarded in your trash cart, never your
+                  recycling cart. The same applies to other common tanglers like
+                  the plastic film used on cases of water bottles, clothing
+                  hangers, and textiles, such as clothing, towels, or linens.
+                  Check with your local dry cleaner for options to recycle wire
+                  clothing hangers and consider donating lightly worn clothing
+                  to local charities.
+                </p>
+                <p>
+                  Tanglers also include the plastic bags you may have used to
+                  gather and store your recyclables. Throw garbage bags in the
+                  trash and place your recyclables in the cart loose. Recycle
+                  single-use plastic bags in special bins at your local grocery
+                  or big box store. If you can't return bags to store locations,
+                  it's okay to discard them in your trash cart.
+                </p>
+                <p>
+                  Trash these tanglers to help us keep our recycling equipment
+                  working to recycle items that we can successfully recover.
+                </p>
+              </div>
+              <!-- /.col -->
+            </div>
+            <!-- /.row -->
+          </div>
+
+          <div class="tab-pane fade" id="tab3">
+            <div class="row">
+              <div class="col-md-5 col-md-offset-1 col-sm-6">
+                <div class="embed-responsive embed-responsive-16by9 thumbnail">
+                  <!--  -->
+                  <iframe
+                    class="embed-responsive-item"
+                    src="https://www.youtube.com/embed/RCn5xrAFh2Q"
+                  ></iframe>
+                </div>
+              </div>
+              <!-- /.col -->
+              <div class="col-md-5 col-sm-6">
+                <h3>Keep Plastic Bags Out of Recycling</h3>
+                <p>
+                  Remember to keep your recyclables clean, dry, and un-bagged
+                  when depositing them into recycling carts or local drop-off
+                  centers. &nbsp;Bagged recyclables aren't recycled because they
+                  can't be sorted by the recycling equipment.<br />
+                </p>
+                <p>
+                  Utilizing reusable bags is more eco-friendly than getting
+                  single-use plastic bags when shopping. Plastic bags can only
+                  be recycled at participating retailers. If you can't return
+                  bags to store locations, it's okay to throw them away in the
+                  garbage since all four governments use Waste-to-Energy
+                  facilities for trash disposal – turning garbage into renewable
+                  electricity.<br />
+                </p>
+              </div>
+              <!-- /.col -->
+            </div>
+            <!-- /.row -->
+          </div>
+
+          <div class="tab-pane fade" id="tab4">
+            <div class="row">
+              <div class="col-sm-10 col-sm-offset-1 text-center">
+                <h3>When in Doubt, Throw It Out</h3>
+                <p>
+                  If you are unsure about whether an item is recyclable, visit
+                  your municipal recycling webpage below to verify if it can be
+                  recycled in your program. &nbsp;Remember “when in doubt, throw
+                  it out” as local recycling programs are designed to recover
+                  typical household plastic, glass and metal containers, and dry
+                  paper and cardboard. Not all plastics and metals can be
+                  recycled in local programs.
+                </p>
+                <ul>
+                  <li>
+                    <a
+                      href="http://www.hcflgov.net/residents/property-owners-and-renters/trash-and-recycling/what-can-i-recycle"
+                      target="_blank"
+                      >Hillsborough County</a
+                    >
+                  </li>
+                  <li>
+                    <a
+                      href="http://www.pinellascounty.org/solidwaste/recycle.htm"
+                      target="_blank"
+                      >Pinellas County</a
+                    >
+                  </li>
+                  <li>
+                    <a
+                      href="https://www.tampagov.net/solid-waste/programs/recycling-and-waste-reduction"
+                      target="_blank"
+                      >City of Tampa</a
+                    >
+                  </li>
+                  <li>
+                    <a href="http://www.stpete.org/recycling" target="_blank"
+                      >City of St. Petersburg</a
+                    >
+                  </li>
+                </ul>
+              </div>
+              <!-- /.col -->
+            </div>
+            <!-- /.row -->
+          </div>
+
+          <div class="tab-pane fade" id="tab5">
+            <div class="row">
+              <div class="col-md-4 col-md-offset-2">
+                <h3>What is Recycling Contamination?</h3>
+                <p>
+                  Contamination happens when residents attempt to recycle items
+                  that can't be recovered in our single-stream residential
+                  recycling programs. Items such as plastic bags, cords, wires,
+                  tarps, and hoses jam and damage sorting equipment. Trash these
+                  tanglers to help us keep our recycling equipment working to
+                  recycle items that we can successfully recover.
+                </p>
+                <p>
+                  Unrinsed food containers or soiled paper can't be recovered
+                  and contaminate the other clean, quality recyclables. Items,
+                  such as electronics or clothing, also can't be recovered in
+                  single-stream residential drop-off or curbside collection
+                  programs, but may be recyclable at specific locations and
+                  other collection programs within the region.
+                </p>
+                <p>
+                  Contamination increases recycling costs and degrades the
+                  quality of materials, reducing the ability of the materials to
+                  be recycled. Help contribute to the success of recycling
+                  programs by reviewing what can and cannot be recycled by
+                  visiting your local government's recycling webpage.
+                </p>
+                <p>
+                  See how the State of Florida is tackling recycling
+                  contamination by visiting the
+                  <a href="http://floridarecycles.org/" target="_blank"
+                    >FloridaRecycles</a
+                  >
+                  webpage.
+                </p>
+              </div>
+              <!-- /.col -->
+              <div class="col-md-4">
+                <img
+                  class="img-responsive"
+                  src="/assets/images/contamination.jpg"
+                />
+              </div>
+              <!-- /.col -->
+            </div>
+            <!-- /.row -->
+          </div>
+        </div>
+      </div>
+      <!-- /.container -->
+    </section>
+
+    <!-- footer -->
+    <footer class="content-block-nopad bg-deepocean footer-wrap-1-2">
+      <div class="container footer-1-2">
+        <img
+          class="img-responsive center-block"
+          src="/assets/images/brand/recycleLogo.png"
+        />
+        <p class="text-center">&copy; Tampa Bay Recycles, 2017</p>
+        <p class="text-center">
+          <a href="/es" class="text-danger">Español</a>
+        </p>
+      </div>
+    </footer>
+
+    <script
+      src="/assets/js/jquery-1.11.1.min.js"
+      type="text/javascript"
+    ></script>
+    <script
+      src="/assets/bootstrap/js/bootstrap.min.js"
+      type="text/javascript"
+    ></script>
+    <script src="/assets/js/hero-carousel.js" type="text/javascript"></script>
+  </body>
+</html>
