--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
       src="https://www.googletagmanager.com/gtag/js?id=UA-27684456-4"
     ></script>
     <script type="text/javascript">
-      window.dataLayer = window.dataLayer || []
+      window.dataLayer = window.dataLayer || [];
       function gtag() {
-        dataLayer.push(arguments)
+        dataLayer.push(arguments);
       }
-      gtag('js', new Date())
-      gtag('config', 'UA-27684456-4')
+      gtag("js", new Date());
+      gtag("config", "UA-27684456-4");
     </script>
 
     <meta charset="utf-8" />
@@ -97,7 +97,7 @@
             </a>
           </div>
           <div class="col-md-3">
-            <a href="http://www.pinellascounty.org/recycle" target="_blank">
+            <a href="https://pinellas.gov/recycling-faq/." target="_blank">
               <img
                 alt="Pinellas County"
                 src="/assets/images/partner-logos/SW_3pmsc.png"
@@ -328,7 +328,7 @@
                   </li>
                   <li>
                     <a
-                      href="http://www.pinellascounty.org/solidwaste/recycle.htm"
+                      href="https://pinellas.gov/recycling-faq/"
                       target="_blank"
                       >Pinellas County</a
                     >
