--- a/index.html
+++ b/index.html
@@ -107,8 +107,24 @@
           <div class="col-md-3">
             <a href="http://www.stpete.org/recycling" target="_blank">
               <img
-                alt="Client Logo"
+                alt="St. Petersburg"
                 src="/assets/images/partner-logos/StPetersburg%20Logo%20Full%20Color.png"
+              />
+            </a>
+          </div>
+        </div>
+
+        <!-- second tier partners -->
+        <div class="row" style="margin: 3rem 0">
+          <div class="col-md-2 col-md-offset-5">
+            <a
+              href="https://www.templeterrace.gov/187/Recycling"
+              target="_blank"
+            >
+              <img
+                alt="Temple Terrace"
+                src="/assets/images/partner-logos/TempleTerrace.png"
+                class="img-responsive"
               />
             </a>
           </div>
